# Copyright (c) 2019 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//brave/browser/brave_ads/android/java_sources.gni")
import("//brave/components/brave_ads/browser/buildflags/buildflags.gni")
import("//brave/components/brave_referrals/buildflags/buildflags.gni")
import("//brave/components/brave_rewards/browser/buildflags/buildflags.gni")
import("//brave/components/brave_sync/buildflags/buildflags.gni")
import("//brave/components/permissions/android/java_sources.gni")
import("//brave/components/safetynet/java_sources.gni")
import("//components/feed/features.gni")

brave_java_sources = [
  "../../brave/android/feed/core/java/src/org/chromium/chrome/browser/feed/BraveFeedSurfaceCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveAppHooks.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveBadge.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveFeatureList.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveIntentHandler.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveLaunchIntentDispatcher.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRelaunchUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsBalance.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsDonationSentActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsExternalWallet.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsNativeWorker.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsOnboardingPagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsPanelPopup.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsPublisher.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsSiteBannerActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsUserWalletActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveRewardsVerifyWalletActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveSyncReflectionUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/BraveUphold.java",
  "../../brave/android/java/org/chromium/chrome/browser/CrossPromotionalModalDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/InternetConnection.java",
  "../../brave/android/java/org/chromium/chrome/browser/QRCodeShareDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/SetDefaultBrowserActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/app/BraveActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "../../brave/android/java/org/chromium/chrome/browser/app/appmenu/BraveAppMenuPropertiesDelegateImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/appmenu/BraveTabbedAppMenuPropertiesDelegate.java",
  "../../brave/android/java/org/chromium/chrome/browser/bookmarks/BraveBookmarkUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/BraveLayoutManagerChrome.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/phone/StackLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/phone/StackLayoutBase.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/phone/stack/OverlappingStack.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/phone/stack/Stack.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/phone/stack/StackAnimation.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/phone/stack/StackTab.java",
  "../../brave/android/java/org/chromium/chrome/browser/compositor/layouts/phone/stack/StackViewAnimation.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/HeightWrappingViewPager.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/NonSwipeableViewPager.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/VerticalViewPager.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/ArrowColorDrawable.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltip.java",
  "../../brave/android/java/org/chromium/chrome/browser/custom_layout/popup_window_tooltip/PopupWindowTooltipUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupENSResolveMethodPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupUnstoppableDomainsResolveMethodPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/document/BraveLauncherActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/download/BraveMimeUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/download/settings/BraveDownloadSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/externalnav/BraveExternalNavigationHandler.java",
  "../../brave/android/java/org/chromium/chrome/browser/feedback/BraveHelpAndFeedbackLauncherImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/help/BraveHelpAndFeedbackLauncher.java",
  "../../brave/android/java/org/chromium/chrome/browser/homepage/BraveHomepageManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/homepage/settings/BraveHomepageSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/informers/BraveAndroidSyncDisabledInformer.java",
  "../../brave/android/java/org/chromium/chrome/browser/language/settings/BraveLanguageSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/BraveStatsTable.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/DatabaseHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/SavedBandwidthTable.java",
  "../../brave/android/java/org/chromium/chrome/browser/local_database/TopSiteTable.java",
  "../../brave/android/java/org/chromium/chrome/browser/night_mode/settings/BraveRadioButtonGroupThemePreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/night_mode/settings/BraveThemePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveNotificationManagerProxyImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveNotificationPlatformBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveNotificationSettingsBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveOnboardingNotification.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/BraveSetDefaultBrowserNotificationService.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/channels/BraveChannelDefinitions.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotification.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationPublisher.java",
  "../../brave/android/java/org/chromium/chrome/browser/notifications/retention/RetentionNotificationUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/BraveDuckDuckGoOfferView.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/BraveNewTabPage.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/BraveNewTabPageLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/IncognitoNewTabPageView.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetItem.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/NTPWidgetStackAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp/widget/SwipeAndDragHelper.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/NTPBackgroundImagesBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/RewardsBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/BackgroundImage.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/ImageCredit.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/NTPImage.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredLogo.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/SponsoredTab.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/TopSite.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/model/Wallpaper.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/FetchWallpaperWorkerTask.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/NTPUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/NewTabPageListener.java",
  "../../brave/android/java/org/chromium/chrome/browser/ntp_background_images/util/SponsoredImageUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/omnibox/suggestions/editurl/BraveEditUrlSuggestionProcessor.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/BraveRewardsOnboardingFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnViewPagerAction.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnboardingActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnboardingPrefManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/OnboardingViewPagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/P3aOnboardingActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/SearchActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/SearchEngineEnum.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/SearchEngineOnboardingFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/TroubleshootingOnboardingFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightItem.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/HighlightView.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2Fragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/onboarding/v2/OnboardingV2PagerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/partnercustomizations/BravePartnerBrowserCustomizations.java",
  "../../brave/android/java/org/chromium/chrome/browser/partnercustomizations/CloseBraveManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/password_manager/settings/BravePasswordSettingsBase.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/BravePrefServiceBridge.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/BravePreferenceKeys.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/website/BraveShieldsContentSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/preferences/website/BraveShieldsContentSettingsObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/privacy/settings/BravePrivacySettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/BarcodeTracker.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/BarcodeTrackerFactory.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/CameraSource.java",
  "../../brave/android/java/org/chromium/chrome/browser/qrreader/CameraSourcePreview.java",
  "../../brave/android/java/org/chromium/chrome/browser/query_tiles/BraveQueryTileSection.java",
  "../../brave/android/java/org/chromium/chrome/browser/rate/RateDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/rate/RateFeedbackUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/rate/RateUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/safe_browsing/settings/BraveStandardProtectionSettingsFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/AppearancePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BackgroundImagesPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveCustomTabsPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveDialogPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveLicensePreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveLicensePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveMainPreferencesBase.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BravePreferenceDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BravePreferenceFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveRewardsPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveRewardsResetPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveRewardsResetPreferenceDialog.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSearchEngineUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSearchEnginesPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSettingsActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSettingsLauncherImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveStatsPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWebrtcPolicyPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/BraveWebrtcPolicyPreferencesFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/SearchEngineTabModelSelectorObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/developer/BraveQAPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/developer/BraveRewardsDebugPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/settings/themes/BraveRadioButtonGroupCustomHomepageThemePreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/BraveShieldsHandler.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/BraveShieldsMenuObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/BraveShieldsUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/shields/ShieldsTooltipEnum.java",
  "../../brave/android/java/org/chromium/chrome/browser/signin/BraveSigninManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/site_settings/BraveSiteSettingsDelegate.java",
  "../../brave/android/java/org/chromium/chrome/browser/site_settings/DesktopModePreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/site_settings/PlayYTVideoInBrowserPreferences.java",
  "../../brave/android/java/org/chromium/chrome/browser/suggestions/tile/BraveTileView.java",
  "../../brave/android/java/org/chromium/chrome/browser/sync/BraveAndroidSyncSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/sync/settings/BraveManageSyncSettings.java",
  "../../brave/android/java/org/chromium/chrome/browser/tabmodel/BraveTabCreator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/BraveHomeButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/BraveIncognitoToggleTabLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/BraveToolbarManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BookmarksButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomTabSwitcherActionMenuCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarConfiguration.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarNewTabButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarVariationManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BraveBottomControlsCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BraveScrollingBottomViewResourceFrameLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarLinearLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarMediator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarModel.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarViewBinder.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/SearchAccelerator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/ShareButton.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarMediator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarModel.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarViewBinder.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/menu_button/BraveMenuButtonCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveTabSwitcherModeTTCoordinatorPhone.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveTabSwitcherModeTTPhone.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveToolbarLayout.java",
  "../../brave/android/java/org/chromium/chrome/browser/toolbar/top/BraveTopToolbarCoordinator.java",
  "../../brave/android/java/org/chromium/chrome/browser/ui/brave_tricks/checkbox_to_switch/CheckBoxPreference.java",
  "../../brave/android/java/org/chromium/chrome/browser/ui/messages/infobar/BraveSimpleConfirmInfoBarBuilder.java",
  "../../brave/android/java/org/chromium/chrome/browser/upgrade/BravePackageReplacedBroadcastReceiver.java",
  "../../brave/android/java/org/chromium/chrome/browser/upgrade/BraveUpgradeJobIntentServiceImpl.java",
  "../../brave/android/java/org/chromium/chrome/browser/upgrade/NotificationIntent.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/BraveDbUtil.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/ConfigurationUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/ImageUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/PackageUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/util/TabUtils.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceAccountBalance.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceActivity.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceBuyFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceCoinNetworks.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvert.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceConvertFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceDepositFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceNativeWorker.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceObserver.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSpinnerAdapter.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceSummaryFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/BinanceWidgetManager.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/CoinNetworkModel.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/ConvertAsset.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetBottomSheetDialogFragment.java",
  "../../brave/android/java/org/chromium/chrome/browser/widget/crypto/binance/CryptoWidgetTabAdapter.java",
]

if (brave_rewards_enabled || enable_brave_referrals) {
  brave_java_sources += brave_rewards_java_sources
}

if (enable_brave_referrals) {
  brave_java_sources += [ "../../brave/android/java/org/chromium/chrome/browser/util/BraveReferrer.java" ]
}

if (brave_ads_enabled) {
  brave_java_sources += brave_ads_java_sources
}

if (enable_brave_sync) {
  brave_java_sources += [
    "../../brave/android/java/org/chromium/chrome/browser/BraveSyncInformers.java",
    "../../brave/android/java/org/chromium/chrome/browser/BraveSyncWorker.java",
    "../../brave/android/java/org/chromium/chrome/browser/settings/BraveSyncScreensPreference.java",
    "../../brave/android/java/org/chromium/chrome/browser/sync/BraveSyncDevices.java",
  ]
}

brave_components_browser_ui_site_settings_android_java = [
  "//brave/components/browser_ui/site_settings/android/java/src/org/chromium/components/browser_ui/site_settings/BraveSingleCategorySettings.java",
  "//brave/components/browser_ui/site_settings/android/java/src/org/chromium/components/browser_ui/site_settings/BraveSiteSettingsPreferencesBase.java",
]

brave_browser_ui_android_appmenu_internal_sources = [ "//brave/browser/ui/android/appmenu/internal/java/src/org/chromium/chrome/browser/ui/appmenu/BraveAppMenu.java" ]

brave_browser_ui_android_toolbar_sources = [ "//brave/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/bottom/BraveBottomControlsMediator.java" ]

brave_java_base_sources = [
  "//brave/android/java/org/chromium/base/BraveCommandLineInitUtil.java",
  "//brave/android/java/org/chromium/base/BraveReflectionUtil.java",
]

brave_java_base_module_sources = [
  "//brave/android/java/org/chromium/chrome/browser/base/SplitCompatJobIntentService.java",
  "//brave/android/java/org/chromium/chrome/browser/upgrade/BraveUpgradeJobIntentService.java",
]

brave_java_base_module_deps =
    [ "//third_party/androidx:androidx_core_core_java" ]
